<resources>
    <string name="service_running">Running in the background.</string>
    <string name="app_name">GAEProxy</string>
    <string name="forward_success">Service started.</string>
    <string name="forward_fail">Service failed to start.</string>
    <string name="service_stopped">GAEProxy service stopped.</string>
    <string name="auto_reconnected">Auto Reconnected</string>
    <string name="reconnect_success">Reconnected successfully.</string>
    <string name="already_stopped">Service has been stopped already.</string>
    <string name="already_running">Service has been started already.</string>
    <string name="forward_stop">Proxy Service Stopped</string>
    <string name="service_failed">Please check your network and login information</string>
    <string name="reconnect_fail">Cannot reconnect</string>
    <string name="ok_iknow">OK, I know</string>
    <string name="proxy">Address</string>
    <string name="port">Local Port</string>
    <string name="sitekey">Site Key</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_reconnect">Auto reconnect</string>
    <string name="auto_set_proxy">Global Proxy</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="feedback">Feedback @ofmax</string>
    <string name="proxy_cat">GAE Proxy Settings</string>
    <string name="fearute_cat">Feature Settings</string>
    <string name="service_controller">Proxy Switch</string>
    <string name="function_cat">Service Controller</string>
    <string name="service_summary">Enable / Disable Proxy</string>
    <string name="proxy_summary">GAE Proxy URL</string>
    <string name="port_summary">Listening port</string>
    <string name="sitekey_summary">Site key for GoAgent</string>
    <string name="port_alert">The port number should be greater than 1024</string>
    <string name="auto_connect_summary">Start GAE Proxy at the startup</string>
    <string name="auto_set_proxy_summary">Set up the global proxy (needs ROOT permission and
        IPTABLES support)
    </string>
    <string name="port_empty">Port should not be empty</string>
    <string name="proxy_empty">Proxy should not be empty</string>
    <string name="install_cat">Package configure</string>
    <string name="isInstalled">Install / Uninstall</string>
    <string name="download">Downloading</string>
    <string name="downloading">Downloading, Patient Please...</string>
    <string name="isInstalled_summary">Install / Uninstall extra packages (need SD card)</string>
    <string name="install_alert">Please install dependent module first! (Scroll to
        the bottom, and select to install)
    </string>
    <string name="sdcard_alert">Please make sure you have a SD CARD!</string>
    <string name="recovery">Reset</string>
    <string name="unzip">Unzipping...</string>
    <string name="proxied_apps">Individual Proxy</string>
    <string name="proxied_apps_summary">Set individual proxy for apps (needs ROOT permission and IPTABLES support)
    </string>
    <string name="bypass_apps">Bypass Mode</string>
    <string name="bypass_apps_summary">Enable this option to bypass selected apps</string>
    <string name="proxied_help">Select apps to use with GAEProxy:</string>
    <string name="crash_alert">An unexpected exit detected, context has been reset.
    </string>
    <string name="copy_rights">GAEProxy is an open source project
        published under
        the GPLv3. \n\nIf you have any questions, please visit
        our project page on
        googlecode. \n\n(gaeproxy.googlecode.com)
    </string>
    <string name="install_ca">Install CA</string>
    <string name="about">About</string>
    <string name="about_title">GAEProxy %s</string>
    <string name="proxy_type">Proxy Type</string>
    <string-array name="chn_list">
        <item>0.0.0.0/7</item>
        <item>10.0.0.0/8</item>
        <item>14.0.0.0/8</item>
        <item>27.0.0.0/8</item>
        <item>36.0.0.0/8</item>
        <item>39.0.0.0/8</item>
        <item>42.0.0.0/7</item>
        <item>49.0.0.0/8</item>
        <item>58.0.0.0/7</item>
        <item>60.0.0.0/7</item>
        <item>101.0.0.0/8</item>
        <item>103.0.0.0/8</item>
        <item>106.0.0.0/8</item>
        <item>110.0.0.0/7</item>
        <item>112.0.0.0/4</item>
        <item>134.128.0.0/9</item>
        <item>139.0.0.0/9</item>
        <item>139.128.0.0/9</item>
        <item>140.0.0.0/9</item>
        <item>140.128.0.0/9</item>
        <item>144.0.0.0/9</item>
        <item>144.128.0.0/9</item>
        <item>150.0.0.0/8</item>
        <item>153.0.0.0/8</item>
        <item>157.0.0.0/9</item>
        <item>157.128.0.0/9</item>
        <item>159.128.0.0/9</item>
        <item>161.128.0.0/9</item>
        <item>162.0.0.0/9</item>
        <item>163.0.0.0/8</item>
        <item>166.0.0.0/9</item>
        <item>167.128.0.0/9</item>
        <item>168.128.0.0/9</item>
        <item>171.0.0.0/8</item>
        <item>172.0.0.0/12</item>
        <item>175.0.0.0/8</item>
        <item>180.0.0.0/8</item>
        <item>182.0.0.0/7</item>
        <item>192.112.0.0/12</item>
        <item>192.128.0.0/9</item>
        <item>202.0.0.0/7</item>
        <item>210.0.0.0/7</item>
        <item>218.0.0.0/7</item>
        <item>220.0.0.0/6</item>
    </string-array>
</resources>